--- a/omod/src/main/webapp/resources/htmlforms/ipd-nurse.html
+++ b/omod/src/main/webapp/resources/htmlforms/ipd-nurse.html
@@ -9,18 +9,11 @@ formDisplayStyle="Simple"
 >
 
 <ifMode mode="VIEW">
-	<script type="text/javascript" id="handleViewMode">
+	<script type="text/javascript" >
 
 	// JavaScript for VIEW mode
 	jQuery(document).ready(function(){
 		handleViewMode("348c2a9e-17c8-4c15-8cef-e8f332a69853");
-
-		$("htmlform").each(function (index, currentForm) {
-			if ($(currentForm).attr("formuuid") == "348c2a9e-17c8-4c15-8cef-e8f332a69853") {
-				$("#when-div").addClass("hidden");
-			}
-		});
-
 	});
 </script>
 
@@ -124,7 +117,6 @@ formDisplayStyle="Simple"
 	</fieldset>
 	<fieldset field-separator=", ">
 		<legend>Financial assessment</legend>
-		
 		<h3>Initial financial assessment completed</h3>
 		<p>
 			<obs id="fin-ass" conceptId="LFHC:1219">
@@ -134,13 +126,15 @@ formDisplayStyle="Simple"
 			</obs>
 		</p>
 		<ifMode mode="view" include="false">
-			<p id="fin-ass-yes">
-				<span class="questionLabel"><lookup expression="fn.getConcept('LFHC:1227').name" /></span>
-				<obs conceptId="LFHC:1227" style="checkbox"/>
-			</p>
+			<span id="fin-ass-yes" >
+				<h3><lookup expression="fn.getConcept('LFHC:1227').name" /></h3>
+				<p>
+					<obs conceptId="LFHC:1227" style="checkbox"/>
+				</p>
+			</span>
 		</ifMode>
 	</fieldset>
-	<!-- Display the food support provided as a separate fieldset in VIEW mode to diaply it in 2 lines following client requirement -->
+	<!-- Display the food support provided as a separate fieldset in VIEW mode to display it in 2 lines following client requirement -->
 	<ifMode mode="view">
 		<fieldset>
 			<legend>Food support provided</legend>
