--- a/omod/src/main/webapp/resources/htmlforms/history.html
+++ b/omod/src/main/webapp/resources/htmlforms/history.html
@@ -1,11 +1,11 @@
 <htmlform formUuid="400a99d9-c1bd-4b5c-acb3-fedb4ccc0ea4" formName="Doctor History" formEncounterType="a9702711-f39c-4a91-ad96-88c1213b12b7" formVersion="0.6"
-	formAddMetadata="yes"
-	formUILocation="patientDashboard.visitActions"
-	formOrder="4"
-	formIcon="icon-stethoscope"
-	formShowIf=""
-	formDisplayStyle="Simple"
-	>
+formAddMetadata="yes"
+formUILocation="patientDashboard.visitActions"
+formOrder="4"
+formIcon="icon-stethoscope"
+formShowIf=""
+formDisplayStyle="Simple"
+>
 
 <ifMode mode="VIEW" include="false">
 	<uiInclude provider="lfhcforms" javascript="toggleContainers.js"/>
@@ -18,11 +18,10 @@
 </ifMode>
 
 <ifMode mode="VIEW">
-	<script type="text/javascript" id="handleViewModeForTable">
+	<script type="text/javascript" >
 		// JavaScript for VIEW mode
 		jQuery(document).ready(function(){
 			handleViewMode("400a99d9-c1bd-4b5c-acb3-fedb4ccc0ea4");
-			handleViewModeForTable("400a99d9-c1bd-4b5c-acb3-fedb4ccc0ea4");
 		});
 	</script>
 </ifMode>
@@ -46,7 +45,7 @@
 &lt;/script>" />
 </ifMode>
 
-<div class="hidden" id="who-when-where">
+<div class="hidden" id="who-where-when">
 	<p id="who">
 		<label>
 			<uimessage code="coreapps.patientDashBoard.provider" />
@@ -55,7 +54,7 @@
 			<encounterProvider default="currentUser" required="true" />
 		</span>
 	</p>
-	<p id="when">
+	<p id="where">
 		<label>
 			<uimessage code="coreapps.patientDashBoard.location" />
 		</label>
@@ -63,7 +62,7 @@
 			<encounterLocation default="SessionAttribute:emrContext.sessionLocationId" />
 		</span>
 	</p>
-	<p id="where">
+	<p id="when">
 		<label>
 			<uimessage code="coreapps.patientDashBoard.date" />
 		</label>
@@ -91,7 +90,6 @@
 	<fieldset field-separator=", ">
 		<legend>
 			Chief complaint
-			<!--<lookup expression="fn.getConcept('160029').name" /> -->
 		</legend>
 		<h3>
 			Chief complaint
@@ -150,24 +148,17 @@
 			</tr>
 
 		</table>
-
-		<p>
-			<br/>
-		</p>
+		<h3>
+			Other
+		</h3>
 		<repeat>
 			<template>
 
-				<div id="{n}-toggleContainer" templateBlockId="chiefComplaintOther" class="toggleContainer" style="display:none;">
-					<p>
-						<obs id="{n}" conceptId="CIEL:5219" labelText="Other: (autocomplete)" answerClasses="Diagnosis" style="autocomplete" />
-					</p>
-
+				<p id="{n}-toggleContainer" templateBlockId="chiefComplaintOther" class="toggleContainer" style="display:none;">
+					<obs id="{n}" conceptId="CIEL:5219" answerClasses="Diagnosis" style="autocomplete" />
 					<i class="addEntry icon-">&#xf055; Add</i>
 					<i class="removeEntry icon-">   &#xf056; Remove</i>
-					<br/>
-
-				</div>
-
+				</p>
 			</template>
 			<render n="201"/>
 			<render n="202"/>
@@ -212,9 +203,6 @@
 			Beriberi risk
 		</h3>
 		<p>
-			<ifMode mode="VIEW" include="false">
-				<span>Beriberi risk</span>
-			</ifMode>
 			<obs id="beriberi-risk" conceptId="LFHC:1003">
 				<ifMode mode="VIEW" include="false">
 					<controls>
@@ -231,9 +219,9 @@
 				</p>
 			</span>
 			<br/>
-			<h6>
+			<h3>
 				Risk factors:
-			</h6>
+			</h3>
 			<em>
 				<lookup expression="fn.getConcept('CIEL:158420').name" />
 				,
@@ -260,9 +248,6 @@
 			Tuberculosis risk
 		</h3>
 		<p>
-			<ifMode mode="VIEW" include="false">
-				<span>Tuberculosis risk</span>
-			</ifMode>
 			<obs id="tb-risk" conceptId="CIEL:1496" answerConceptIds="CIEL:1065,CIEL:1066,CIEL:1067">
 				<ifMode mode="VIEW" include="false" >
 					<controls>
@@ -277,8 +262,11 @@
 				<em><lookup expression="fn.getConcept('CIEL:1496').name" /></em>
 			</span>
 		</ifMode>
+		<h3>
+			<lookup expression="fn.getConcept('CIEL:162633').name" />
+		</h3>
 		<p>
-			<span class="questionLabel"><lookup expression="fn.getConcept('CIEL:162633').name" /></span>
+			
 			<obs conceptId="162633"/>
 		</p>
 	</fieldset>
@@ -318,9 +306,6 @@
 			<obs conceptId="CIEL:162143" rows="4" cols="50"></obs>
 		</p>
 	</fieldset>
-
-
-
 </section>
 <submit/>
 </htmlform>
