--- a/omod/src/main/webapp/resources/htmlforms/homecare-reg.html
+++ b/omod/src/main/webapp/resources/htmlforms/homecare-reg.html
@@ -96,7 +96,7 @@ formDisplayStyle="Simple"
 	</script>
 </ifMode>
 
-<div class="hidden" id="who-when-where">
+<div class="hidden" id="who-where-when">
 	<p id="who">
 		<label>
 			<uimessage code="coreapps.patientDashBoard.provider" />
@@ -105,7 +105,7 @@ formDisplayStyle="Simple"
 			<encounterProvider default="currentUser" required="true" />
 		</span>
 	</p>
-	<p id="when">
+	<p id="where">
 		<label>
 			<uimessage code="coreapps.patientDashBoard.location" />
 		</label>
@@ -113,7 +113,7 @@ formDisplayStyle="Simple"
 			<encounterLocation default="SessionAttribute:emrContext.sessionLocationId" />
 		</span>
 	</p>
-	<p id="where">
+	<p id="when">
 		<label>
 			<uimessage code="coreapps.patientDashBoard.date" />
 		</label>
@@ -135,104 +135,107 @@ formDisplayStyle="Simple"
 			<uimessage code="lfhcforms.homecare-regular-visit.legend.comfort-level" />
 		</h3>
 		<ifMode mode="view" include="false">
-		<p style="margin-top:5%">
-			<p  class="wong-baker-faces icon-check-empty" value="0">
-				0
-				<img src="../../ms/uiframework/resource/lfhcforms/images/wong-baker-0.png" style="width:70px;"/> 
+			<p style="margin-top:5%">
+				<p  class="wong-baker-faces icon-check-empty" value="0">
+					0
+					<img src="../../ms/uiframework/resource/lfhcforms/images/wong-baker-0.png" style="width:70px;"/> 
+				</p>
+				<p  class="wong-baker-faces icon-check-empty" value="2">
+					2
+					<img src="../../ms/uiframework/resource/lfhcforms/images/wong-baker-2.png" style="width:70px;"/> 
+				</p>
+				<p  class="wong-baker-faces icon-check-empty" value="4">
+					4
+					<img src="../../ms/uiframework/resource/lfhcforms/images/wong-baker-4.png" style="width:70px;"/> 
+				</p>
+				<p  class="wong-baker-faces icon-check-empty" value="6">
+					6
+					<img src="../../ms/uiframework/resource/lfhcforms/images/wong-baker-6.png" style="width:70px;"/> 
+				</p>
+				<p  class="wong-baker-faces icon-check-empty" value="8">
+					8
+					<img src="../../ms/uiframework/resource/lfhcforms/images/wong-baker-8.png" style="width:70px;"/> 
+				</p>
+				<p  class="wong-baker-faces icon-check-empty" value="10">
+					10
+					<img src="../../ms/uiframework/resource/lfhcforms/images/wong-baker-10.png" style="width:70px;"/> 
+				</p>
 			</p>
-			<p  class="wong-baker-faces icon-check-empty" value="2">
-				2
-				<img src="../../ms/uiframework/resource/lfhcforms/images/wong-baker-2.png" style="width:70px;"/> 
-			</p>
-			<p  class="wong-baker-faces icon-check-empty" value="4">
-				4
-				<img src="../../ms/uiframework/resource/lfhcforms/images/wong-baker-4.png" style="width:70px;"/> 
-			</p>
-			<p  class="wong-baker-faces icon-check-empty" value="6">
-				6
-				<img src="../../ms/uiframework/resource/lfhcforms/images/wong-baker-6.png" style="width:70px;"/> 
-			</p>
-			<p  class="wong-baker-faces icon-check-empty" value="8">
-				8
-				<img src="../../ms/uiframework/resource/lfhcforms/images/wong-baker-8.png" style="width:70px;"/> 
-			</p>
-			<p  class="wong-baker-faces icon-check-empty" value="10">
-				10
-				<img src="../../ms/uiframework/resource/lfhcforms/images/wong-baker-10.png" style="width:70px;"/> 
-			</p>
+		</ifMode>
+		<h3 id="wb-title">
+			Wong baker score
+		</h3>
+		<p>
+			
+			<obs id="wb-score" conceptId="CIEL:160287"/>
 		</p>
-	</ifMode>
-	<p>
-		<span id="wb-title">Wong baker score</span>
-		<obs id="wb-score" conceptId="CIEL:160287"/>
-	</p>
-</fieldset>
+	</fieldset>
 
 
-<!-- General fieldset -->
-<fieldset field-separator=", ">
-	<legend>
-		<uimessage code="lfhcforms.homecare-regular-visit.legend.general" />
-	</legend>
-	<h3>
-		<uimessage code="lfhcforms.homecare-regular-visit.legend.general" />
-	</h3>
-	<p>
-		<obs conceptId="CIEL:1391" cols="40" rows="5" />
-	</p>
-</fieldset>
+	<!-- General fieldset -->
+	<fieldset field-separator=", ">
+		<legend>
+			<uimessage code="lfhcforms.homecare-regular-visit.legend.general" />
+		</legend>
+		<h3>
+			<uimessage code="lfhcforms.homecare-regular-visit.legend.general" />
+		</h3>
+		<p>
+			<obs conceptId="CIEL:1391" cols="40" rows="5" />
+		</p>
+	</fieldset>
 
-<!-- Respiratory fieldset -->
-<fieldset field-separator=", ">
-	<legend>
-		<uimessage code="lfhcforms.homecare-regular-visit.legend.respiratory" />
-	</legend>
-	<h3>
-		<uimessage code="lfhcforms.homecare-regular-visit.legend.respiratory" />
-	</h3>
-	<p>
-		<obs conceptId="LFHC:1291" cols="40" rows="5" />
-	</p>
-</fieldset>
+	<!-- Respiratory fieldset -->
+	<fieldset field-separator=", ">
+		<legend>
+			<uimessage code="lfhcforms.homecare-regular-visit.legend.respiratory" />
+		</legend>
+		<h3>
+			<uimessage code="lfhcforms.homecare-regular-visit.legend.respiratory" />
+		</h3>
+		<p>
+			<obs conceptId="LFHC:1291" cols="40" rows="5" />
+		</p>
+	</fieldset>
 
-<!-- Cardiovascular fieldset -->
-<fieldset field-separator=", ">
-	<legend>
-		<uimessage code="lfhcforms.homecare-regular-visit.legend.cardiovascular" />
-	</legend>
-	<h3>
-		<uimessage code="lfhcforms.homecare-regular-visit.legend.cardiovascular" />
-	</h3>
-	<p>
-		<obs conceptId="LFHC:1177" cols="40" rows="5" />
-	</p>
-</fieldset>
+	<!-- Cardiovascular fieldset -->
+	<fieldset field-separator=", ">
+		<legend>
+			<uimessage code="lfhcforms.homecare-regular-visit.legend.cardiovascular" />
+		</legend>
+		<h3>
+			<uimessage code="lfhcforms.homecare-regular-visit.legend.cardiovascular" />
+		</h3>
+		<p>
+			<obs conceptId="LFHC:1177" cols="40" rows="5" />
+		</p>
+	</fieldset>
 
-<!-- Digestive fieldset -->
-<fieldset field-separator=", ">
-	<legend>
-		<uimessage code="lfhcforms.homecare-regular-visit.legend.digestive" />
-	</legend>
-	<h3>
-		<uimessage code="lfhcforms.homecare-regular-visit.legend.digestive" />
-	</h3>
-	<p>
-		<obs conceptId="LFHC:1292" cols="40" rows="5" />
-	</p>
-</fieldset>
+	<!-- Digestive fieldset -->
+	<fieldset field-separator=", ">
+		<legend>
+			<uimessage code="lfhcforms.homecare-regular-visit.legend.digestive" />
+		</legend>
+		<h3>
+			<uimessage code="lfhcforms.homecare-regular-visit.legend.digestive" />
+		</h3>
+		<p>
+			<obs conceptId="LFHC:1292" cols="40" rows="5" />
+		</p>
+	</fieldset>
 
-<!-- Other fieldset -->
-<fieldset field-separator=", ">
-	<legend>
-		<uimessage code="lfhcforms.homecare-regular-visit.legend.other" />
-	</legend>
-	<h3>
-		<uimessage code="lfhcforms.homecare-regular-visit.legend.other" />
-	</h3>
-	<p>
-		<obs conceptId="LFHC:1293" cols="40" rows="5" />
-	</p>
-</fieldset>
+	<!-- Other fieldset -->
+	<fieldset field-separator=", ">
+		<legend>
+			<uimessage code="lfhcforms.homecare-regular-visit.legend.other" />
+		</legend>
+		<h3>
+			<uimessage code="lfhcforms.homecare-regular-visit.legend.other" />
+		</h3>
+		<p>
+			<obs conceptId="LFHC:1293" cols="40" rows="5" />
+		</p>
+	</fieldset>
 
 </section>
 
