--- a/omod/src/main/webapp/resources/htmlforms/med-order.html
+++ b/omod/src/main/webapp/resources/htmlforms/med-order.html
@@ -85,7 +85,7 @@ formDisplayStyle="Simple"
 &lt;/script>" />
 </ifMode>
 
-<div class="hidden" id="who-when-where">
+<div class="hidden" id="who-where-when">
 	<p id="who">
 		<label>
 			<uimessage code="coreapps.patientDashBoard.provider" />
@@ -94,7 +94,7 @@ formDisplayStyle="Simple"
 			<encounterProvider default="currentUser" required="true" />
 		</span>
 	</p>
-	<p id="when">
+	<p id="where">
 		<label>
 			<uimessage code="coreapps.patientDashBoard.location" />
 		</label>
@@ -102,7 +102,7 @@ formDisplayStyle="Simple"
 			<encounterLocation default="SessionAttribute:emrContext.sessionLocationId" />
 		</span>
 	</p>
-	<p id="where">
+	<p id="when">
 		<label>
 			<uimessage code="coreapps.patientDashBoard.date" />
 		</label>
@@ -121,20 +121,15 @@ formDisplayStyle="Simple"
 		<fieldset >
 			<legend>Drug</legend>
 			<h3>Drug to order</h3>
-			<small>Enter the drug want to prescribe (auto-complete field)</small>
 			<p>
-
 				<obs id="drug-ordered" conceptId="CIEL:1282" answerClasses="Drug" style="autocomplete" size="10"/>
 			</p>
 		</fieldset>
 		<fieldset>
 			<legend>Route</legend>
 			<h3>Route</h3>
-			<small>Choose a route</small>
 			<p>
-
 				<obs id="route" conceptId="LFHC:1029"/>
-
 			</p>
 		</fieldset>
 		<fieldset>
@@ -183,7 +178,6 @@ formDisplayStyle="Simple"
 		<fieldset>
 			<legend>Frequency</legend>
 			<h3>Frequency</h3>
-			<small>Enter the frequency</small>
 			<p>
 				<obs id="frequency"	conceptId="CIEL:160855"/>
 			</p>
@@ -194,22 +188,18 @@ formDisplayStyle="Simple"
 		<fieldset>
 			<legend>Duration</legend>
 			<h3>Duration</h3>
-			<small>Enter the duration</small>
 			<p>
 				<obs id="duration" conceptId="CIEL:159368" showUnits="days"/>
 			</p>
 		</fieldset>
 		<fieldset>
-			<h3>Indication</h3>
 			<legend>Indication</legend>
-			<small>Select an indication (auto-complete field)</small>
+			<h3>Indication</h3>
 			<p>
 				<obs id="indication" conceptId="CIEL:160742" answerClasses="Diagnosis" style="autocomplete"/>
 			</p>
 		</fieldset>
 	</obsgroup>
 </section>
-
-
 <submit/>
 </htmlform>
