--- a/omod/src/main/webapp/resources/htmlforms/nvobs.html
+++ b/omod/src/main/webapp/resources/htmlforms/nvobs.html
@@ -21,11 +21,9 @@ formDisplayStyle="Simple"
 <ifMode mode="VIEW">
 	<script type="text/javascript" id="handleViewMode">
 		// JavaScript for VIEW mode
-		if(jQuery){
 			jQuery(document).ready(function(){
 				handleViewMode("d18289b0-d0a4-4753-a500-55767eb057de");
 			});
-		}
 	</script>
 </ifMode>
 
@@ -48,7 +46,7 @@ formDisplayStyle="Simple"
 &lt;/script>" />
 </ifMode>
 
-<div class="hidden" id="who-when-where">
+<div class="hidden" id="who-where-when">
 	<p id="who">
 		<label>
 			<uimessage code="coreapps.patientDashBoard.provider" />
@@ -57,7 +55,7 @@ formDisplayStyle="Simple"
 			<encounterProvider default="currentUser" required="true" />
 		</span>
 	</p>
-	<p id="when">
+	<p id="where">
 		<label>
 			<uimessage code="coreapps.patientDashBoard.location" />
 		</label>
@@ -65,7 +63,7 @@ formDisplayStyle="Simple"
 			<encounterLocation default="SessionAttribute:emrContext.sessionLocationId" />
 		</span>
 	</p>
-	<p id="where">
+	<p id="when">
 		<label>
 			<uimessage code="coreapps.patientDashBoard.date" />
 		</label>
