--- a/omod/src/main/webapp/resources/htmlforms/opd-nurse.html
+++ b/omod/src/main/webapp/resources/htmlforms/opd-nurse.html
@@ -21,15 +21,7 @@ formDisplayStyle="Simple"
 	<script type="text/javascript" id="handleViewModeForTable">
 		// JavaScript for VIEW mode
 		jQuery(document).ready(function(){
-			$("htmlform").each(function (index, currentForm) {
-				if ($(currentForm).attr("formuuid") == "44305e02-7e49-4f5a-8acf-49042acbe483") {
-					$("br").remove();
-					$("p").filter(":hidden").toggle(true);
-				}
-			});
-			handleViewModeForTable("44305e02-7e49-4f5a-8acf-49042acbe483");
 			handleViewMode("44305e02-7e49-4f5a-8acf-49042acbe483");
-
 		});
 	</script>
 </ifMode>
@@ -53,7 +45,7 @@ formDisplayStyle="Simple"
 &lt;/script>" />
 </ifMode>
 
-<div class="hidden" id="who-when-where">
+<div class="hidden" id="who-where-when">
 	<p id="who">
 		<label>
 			<uimessage code="coreapps.patientDashBoard.provider" />
@@ -62,7 +54,7 @@ formDisplayStyle="Simple"
 			<encounterProvider default="currentUser" required="true" />
 		</span>
 	</p>
-	<p id="when">
+	<p id="where">
 		<label>
 			<uimessage code="coreapps.patientDashBoard.location" />
 		</label>
@@ -70,7 +62,7 @@ formDisplayStyle="Simple"
 			<encounterLocation default="SessionAttribute:emrContext.sessionLocationId" />
 		</span>
 	</p>
-	<p id="where">
+	<p id="when">
 		<label>
 			<uimessage code="coreapps.patientDashBoard.date" />
 		</label>
@@ -146,17 +138,10 @@ formDisplayStyle="Simple"
 			</tr>
 
 		</table>
-
+		<h3>Clinical Details</h3>
 		<p>
-			<br/>
-		</p>
-
-		<p>
-			<span class="questionLabel">Clinical Details: </span>
 			<obs conceptId="159395" rows="6" cols="60"/>
 		</p>
-
-
 	</fieldset>
 
 
@@ -189,7 +174,6 @@ formDisplayStyle="Simple"
 		<h3>
 			Number of days sick
 		</h3>
-
 		<p>
 			<obs conceptId="CIEL:1553" id="duration" showUnits="true" />
 		</p>
@@ -204,7 +188,6 @@ formDisplayStyle="Simple"
 		<h3>
 			Hospital admission during last year
 		</h3>
-
 		<p>
 			<obs conceptId="CIEL:5703" id="previous-admission" style="yes_no_dropdown">
 				<controls>
@@ -213,14 +196,17 @@ formDisplayStyle="Simple"
 			</obs>
 		</p>
 		<span id="previous-admission-yes">
+			<h3>Number of times</h3>
 			<p>
-				<span class="questionLabel">Number of times: </span>
 				<obs conceptId="CIEL:5704" />
 			</p>
+			<h3>
+				Where
+			</h3>
 			<repeat>
 				<template>
-					<p id="{n}-toggleContainer" templateBlockId="admission" class="toggleContainer" style="display:none;">
-						<span class="questionLabel">Where: </span>
+					<p id="{n}-toggleContainer" templateBlockId="admission" class="toggleContainer" style="display:none; ">
+						
 						<obs id="{n}" conceptId="CIEL:1273"/>
 						<i class="addEntry icon-">&#xf055; Add</i>
 						<i class="removeEntry icon-">   &#xf056; Remove</i>
@@ -244,7 +230,6 @@ formDisplayStyle="Simple"
 		<h3>
 			Medication taking now
 		</h3>
-
 		<p>
 			<obs conceptId="CIEL:159367" id="medication-now" answerConceptIds="CIEL:1065,CIEL:1066,CIEL:1067" size="4">
 				<controls>
@@ -252,16 +237,12 @@ formDisplayStyle="Simple"
 				</controls>
 			</obs>
 		</p>
-
-		<p>
-		</p>
-
 		<span id="medication-now-all">
+			<h3>Medication Family</h3>
 			<p>
 				<repeat>
 					<template>
 						<p id="{n}-toggleContainer" templateBlockId="medication" class="toggleContainer" style="display:none;">
-							<span class="questionLabel">Medication Family </span>
 							<obs id="{n}" conceptId="CIEL:1193" />
 							<i class="addEntry icon-">&#xf055; Add</i>
 							<i class="removeEntry icon-">   &#xf056; Remove</i>
@@ -329,8 +310,8 @@ formDisplayStyle="Simple"
 			</p>
 		</includeIf>
 		<span id="gestation-term">
+			<h3>Gestation term</h3>
 			<p>
-				<span class="questionLabel">Gestation term: </span>
 				<obs conceptId="CIEL:159926" answerConceptIds="CIEL:156480,CIEL:156481,CIEL:156482,CIEL:156483,CIEL:156484,CIEL:156485,CIEL:156486,CIEL:156487,CIEL:156488,CIEL:156489,CIEL:156490,CIEL:156491,CIEL:156492,CIEL:156493,CIEL:156494,CIEL:156495,CIEL:156496,CIEL:156497,CIEL:156498" />
 			</p>
 		</span>
@@ -345,7 +326,7 @@ formDisplayStyle="Simple"
 			Maternal problems before birth
 		</h3>
 		<p>
-			<obs id="gestation-problems" conceptId="1576" />
+			<obs id="gestation-problems" conceptId="CIEL:1576" />
 		</p>
 
 	</fieldset>
@@ -357,7 +338,6 @@ formDisplayStyle="Simple"
 		<h3>
 			Maternal medication during pregnancy
 		</h3>
-		<p>
 			<repeat>
 				<template>
 					<p id="{n}-toggleContainer" templateBlockId="matMed" class="toggleContainer" style="display:none;">
@@ -371,10 +351,6 @@ formDisplayStyle="Simple"
 				<render n="503"/>
 				<render n="504"/>
 			</repeat>
-
-		</p>
-
-
 	</fieldset>
 
 	<fieldset field-separator=", ">
@@ -470,7 +446,7 @@ formDisplayStyle="Simple"
 			BCG vaccine given
 		</h3>
 		<p>
-			<obs id="bcg" conceptId="1570" answerConceptIds="1065,1066,1067"/>
+			<obs id="bcg" conceptId="CIEL:1570" answerConceptIds="CIEL:1065,CIEL:1066,CIEL:1067"/>
 
 		</p>
 	</fieldset>
@@ -485,25 +461,22 @@ formDisplayStyle="Simple"
 		</h3>
 		<small>** waiting for concept **</small>
 		<p>
-			<obs id="hepatitis-b" conceptId="1198" answerConceptIds="782,1066,1067">
+			<obs id="hepatitis-b" conceptId="CIEL:1198" answerConceptIds="CIEL:782,CIEL:1066,CIEL:1067">
 				<controls>
-					<when value="1066" thenDisplay="#hepatitis-b-no" />
-					<when value="1067" thenDisplay="#hepatitis-b-unknown" />
+					<when value="CIEL:1066" thenDisplay="#hepatitis-b-no" />
+					<when value="CIEL:1067" thenDisplay="#hepatitis-b-unknown" />
 				</controls>
 			</obs>
 		</p>
 		<span id="hepatitis-b-no">
 			<ifMode mode="VIEW" include="false">
-				<br />
 				<p>
 					<font color="red">Please notify doctor</font>
 				</p>
 			</ifMode>
 		</span>
-
 		<span id="hepatitis-b-unknown">
 			<ifMode mode="VIEW" include="false">
-				<br />
 				<p>
 					<font color="red">Please notify doctor</font>
 				</p>
@@ -512,8 +485,6 @@ formDisplayStyle="Simple"
 
 	</fieldset>
 
-
-
 	<fieldset field-separator=", ">
 		<legend>
 			Feeding history
@@ -521,21 +492,9 @@ formDisplayStyle="Simple"
 		<h3>
 			Feeding history
 		</h3>
-		<!-- TODO: Display checkboxes instead of list -->
 		<p>
-			<obs id="feeding-history" conceptId="1151" style="checkbox">
-				<controls>
-					<when value="5254" thenDisplay="#feeding-history-formula" />
-				</controls>
-			</obs>
+			<obs id="feeding-history" conceptId="CIEL:1151" style="checkbox" />
 		</p>
-		<span id="feeding-history-formula">
-			<br />
-			<p>
-				<obs id="feeding-history" conceptId="1151"/>
-			</p>
-		</span>
-
 	</fieldset>
 
 </section>
