--- a/omod/src/main/webapp/resources/htmlforms/triage.html
+++ b/omod/src/main/webapp/resources/htmlforms/triage.html
@@ -1,24 +1,20 @@
 <htmlform formUuid="5743bf01-7879-40a0-ab26-95fc2446e510" formName="Triage" formEncounterType="5235f7da-194e-4278-afbd-a473bb430857" formVersion="0.6"
-	formAddMetadata="yes"
-	formUILocation="patientDashboard.visitActions"
-	formOrder="1"
-	formIcon="icon-medkit"
-	formShowIf=""
-	formDisplayStyle="Standard"
-	>
+formAddMetadata="yes"
+formUILocation="patientDashboard.visitActions"
+formOrder="1"
+formIcon="icon-medkit"
+formShowIf=""
+formDisplayStyle="Standard"
+>
 
 <ifMode mode="VIEW" include="false">
-
 	<script type="text/javascript">
-
 		$(document).ready(function() {
-
 			if (document.getElementById('under-two-months')) {
 				ageUnderTwoMonths = true;
 			}
 			setTriageLevel(ageUnderTwoMonths);
 		});
-
 
 		jQuery(function () {
 			jQuery(".complaint").change(function () {
@@ -26,9 +22,7 @@
 			});
 		});
 
-
 		var ageUnderTwoMonths = false;
-
 
 		function setTriageLevel (ageUnderTwoMonths) {
 
@@ -66,14 +60,11 @@
 </ifMode>
 
 <ifMode mode="VIEW">
-	<script type="text/javascript" id="handleViewModeForTable">
-
+	<script type="text/javascript">
 		// JavaScript for VIEW mode
 		jQuery(document).ready(function(){
 			handleViewMode("5743bf01-7879-40a0-ab26-95fc2446e510");
-			handleViewModeForTable("5743bf01-7879-40a0-ab26-95fc2446e510");
 		});
-
 	</script>
 </ifMode>
 
@@ -96,7 +87,7 @@
 &lt;/script>" />
 </ifMode>
 
-<div class="hidden" id="who-when-where">
+<div class="hidden" id="who-where-when">
 	<p id="who">
 		<label>
 			<uimessage code="coreapps.patientDashBoard.provider" />
@@ -105,7 +96,7 @@
 			<encounterProvider default="currentUser" required="true" />
 		</span>
 	</p>
-	<p id="when">
+	<p id="where">
 		<label>
 			<uimessage code="coreapps.patientDashBoard.location" />
 		</label>
@@ -113,7 +104,7 @@
 			<encounterLocation default="SessionAttribute:emrContext.sessionLocationId" />
 		</span>
 	</p>
-	<p id="where">
+	<p id="when">
 		<label>
 			<uimessage code="coreapps.patientDashBoard.date" />
 		</label>
@@ -309,7 +300,6 @@
 	</fieldset>
 
 	<fieldset>
-
 		<h3>
 			Suggested triage level
 		</h3>
@@ -319,10 +309,7 @@
 		<ifMode mode="VIEW" include="false">
 			<p><font color="red">* required</font></p>
 		</ifMode>
-
 	</fieldset>
-
-
 </section>
 
 <submit/>
